--- a/step1.html
+++ b/step1.html
@@ -114,7 +114,7 @@ function startConversation(){
   localStorage.setItem("language", language);
   localStorage.setItem("companion", companion);
 
-  window.location.href = "index.html"; // go to Step 2 page
+  window.location.href = "index.html"; // go to Step 2
 }
 </script>
 
