--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+const nickname = localStorage.getItem("nickname");
+const language = localStorage.getItem("language");
+const companion = localStorage.getItem("companion");
+
+if(!nickname || !language || !companion){
+  // redirect to Step 1
+  window.location.href = "step1.html";
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
