--- a/step1.html
+++ b/step1.html
@@ -56,10 +56,7 @@ button {
   font-size:1rem;
   transition:all 0.3s ease;
 }
-button:hover {
-  background:#5b90c7;
-  transform:scale(1.03);
-}
+button:hover { background:#5b90c7; transform:scale(1.03); }
 
 footer { margin-top:2rem; font-size:0.85rem; color:var(--text-muted); }
 footer a { color:var(--text-muted); text-decoration:none; margin:0 0.5rem; }
@@ -114,7 +111,7 @@ function startConversation(){
   localStorage.setItem("language", language);
   localStorage.setItem("companion", companion);
 
-  window.location.href = "index.html"; // go to Step 2
+  window.location.href = "index.html"; // go to Step 2 page
 }
 </script>
 
