--- a/index.html
+++ b/index.html
@@ -1,128 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Talk 2Me Nice — Welcome</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Talk 2Me Nice — Conversation</title>
+
 <style>
 :root {
   --bg-main:#1b1f27;
   --bg-card:#242833;
-  --accent:#ffb86c;
+  --accent:#6fa8dc;
   --text-main:#e1e4ea;
   --text-muted:#a1a6b0;
 }
 
 body {
   margin:0;
-  font-family:'Montserrat',system-ui,sans-serif;
-  background: linear-gradient(160deg, #1b1f27 0%, #2a2f3b 100%);
+  font-family:system-ui, sans-serif;
+  background:var(--bg-main);
   color:var(--text-main);
   display:flex;
-  justify-content:center;
-  align-items:center;
+  flex-direction:column;
   height:100vh;
 }
 
-.container {
-  max-width:400px;
-  width:90%;
-  padding:2rem;
-  background: var(--bg-card);
-  border-radius:20px;
+header {
+  padding:1rem;
   text-align:center;
-  box-shadow:0 8px 20px rgba(0,0,0,0.3);
-  animation: fadeIn 0.8s ease-out;
+  border-bottom:1px solid #333;
 }
 
-h1 { font-family:'Playfair Display', serif; font-size:2rem; margin-bottom:1rem; }
-p { color:var(--text-muted); margin-bottom:1.5rem; }
+#chat {
+  flex:1;
+  padding:1rem;
+  overflow-y:auto;
+  display:flex;
+  flex-direction:column;
+}
 
-label { display:block; margin-top:1rem; margin-bottom:0.3rem; text-align:left; }
+.message {
+  max-width:80%;
+  padding:0.7rem 1rem;
+  margin-bottom:0.7rem;
+  border-radius:16px;
+  line-height:1.4;
+}
 
-input, select {
-  width:100%;
+.user {
+  background:var(--accent);
+  color:#1b1f27;
+  align-self:flex-end;
+}
+
+.bot {
+  background:var(--bg-card);
+  align-self:flex-start;
+}
+
+footer {
+  display:flex;
+  padding:0.8rem;
+  gap:0.5rem;
+  border-top:1px solid #333;
+}
+
+input {
+  flex:1;
   padding:0.6rem;
-  border-radius:10px;
-  border:1px solid var(--accent);
+  border-radius:12px;
+  border:none;
   background:#1f232d;
   color:var(--text-main);
-  font-size:1rem;
 }
 
 button {
-  margin-top:1.5rem;
-  padding:0.8rem 1.5rem;
+  padding:0.6rem 1rem;
   border-radius:999px;
   border:none;
   background:var(--accent);
-  color:#1b1f27;
   cursor:pointer;
-  font-size:1rem;
-  transition: all 0.3s ease;
 }
-button:hover { background:#ff9f40; transform:scale(1.03); }
 
-footer { margin-top:2rem; font-size:0.85rem; color:var(--text-muted); }
-footer a { color:var(--text-muted); text-decoration:none; margin:0 0.5rem; }
-footer a:hover { text-decoration:underline; }
+/* Gear */
+#gear {
+  position:fixed;
+  bottom:90px;
+  right:20px;
+  width:44px;
+  height:44px;
+  border-radius:50%;
+  background:var(--bg-card);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  font-size:20px;
+}
 
-@keyframes fadeIn {
-  from { opacity:0; transform: translateY(20px); }
-  to { opacity:1; transform: translateY(0); }
+/* Options */
+#options {
+  position:fixed;
+  bottom:150px;
+  right:20px;
+  background:var(--bg-card);
+  padding:1rem;
+  border-radius:16px;
+  width:260px;
+  display:none;
+}
+
+.grid {
+  display:grid;
+  grid-template-columns:repeat(6,1fr);
+  gap:0.4rem;
+}
+
+.tile {
+  background:#1f232d;
+  padding:0.5rem;
+  text-align:center;
+  border-radius:8px;
+  cursor:pointer;
+}
+
+.word {
+  cursor:pointer;
+  text-decoration:underline;
 }
 </style>
 </head>
+
 <body>
 
-<div class="container">
-  <p style="font-size:0.85rem; color:#a1a6b0;">Step 1 of 2 · Setup</p>
-  <h1>Welcome to Talk 2Me Nice 💛</h1>
-  <p>Set up your account and get ready to learn naturally.</p>
+<script>
+// Step 2 redirect if Step 1 not completed
+const nickname = localStorage.getItem("nickname");
+const language = localStorage.getItem("language");
+const companion = localStorage.getItem("companion");
 
-  <label for="nickname">Nickname:</label>
-  <input type="text" id="nickname" placeholder="Your nickname">
+if(!nickname || !language || !companion){
+  window.location.href = "step1.html";
+}
+</script>
 
-  <label for="language">Choose Your Language (Free):</label>
-  <select id="language">
-    <option value="en-US">English ✔</option>
-    <option value="es-ES">Spanish ✔</option>
-    <option value="fr-FR">French ✔</option>
-    <option value="de-DE">German ✔</option>
-    <option value="zh-CN">Chinese ✔</option>
-    <option value="ja-JP" disabled>Japanese 🔒</option>
-    <option value="ko-KR" disabled>Korean 🔒</option>
-    <option value="it-IT" disabled>Italian 🔒</option>
-  </select>
+<header>
+  <h2 id="greeting"></h2>
+  <p style="font-size:0.8rem;color:#a1a6b0;">Step 2 of 2 · Conversation</p>
+</header>
 
-  <label for="companion">Choose a Companion:</label>
-  <select id="companion">
-    <option value="whisp">Whisp ✔</option>
-    <option value="star" disabled>Star 🔒</option>
-    <option value="puff" disabled>Puff 🔒</option>
-  </select>
+<div id="chat"></div>
 
-  <button onclick="startConversation()">Continue →</button>
+<footer>
+  <input id="userInput" placeholder="Type a word or phrase…" />
+  <button onclick="sendMessage()">Send</button>
+</footer>
 
-  <footer>
-    <a href="privacy.html">Privacy</a> •
-    <a href="terms.html">Support</a>
-  </footer>
+<div id="gear" onclick="toggleOptions()">⚙️</div>
+
+<div id="options">
+  <label>
+    <input type="checkbox" id="phoneticToggle" />
+    Pronunciation mode
+  </label>
+
+  <p>Alphabet</p>
+  <div class="grid" id="alphabet"></div>
+
+  <p>Numbers</p>
+  <div class="grid" id="numbers"></div>
 </div>
 
 <script>
-function startConversation(){
-  const nickname = document.getElementById("nickname").value || "Friend";
-  const language = document.getElementById("language").value;
-  const companion = document.getElementById("companion").value;
+document.getElementById("greeting").textContent =
+  `Hi ${nickname} 🌱 I'm ${companion}.`;
 
-  localStorage.setItem("nickname", nickname);
-  localStorage.setItem("language", language);
-  localStorage.setItem("companion", companion);
+const chat = document.getElementById("chat");
 
-  window.location.href = "chat.html"; // Go to Step 2
+function speak(text){
+  const u = new SpeechSynthesisUtterance(text);
+  u.lang = language;
+  speechSynthesis.speak(u);
 }
+
+function addMessage(text, sender){
+  const div = document.createElement("div");
+  div.className = `message ${sender}`;
+
+  if(sender==="bot" && document.getElementById("phoneticToggle").checked){
+    text.split(" ").forEach(w=>{
+      const span = document.createElement("span");
+      span.className="word";
+      span.textContent=w+" ";
+      span.onclick=()=>speak(w);
+      div.appendChild(span);
+    });
+  } else {
+    div.textContent=text;
+  }
+
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function sendMessage(){
+  const i = document.getElementById("userInput");
+  if(!i.value.trim()) return;
+  addMessage(i.value,"user");
+  i.value="";
+  setTimeout(()=>{ addMessage("Try tapping a word if pronunciation mode is on 💛","bot"); },500);
+}
+
+addMessage("This is your calm space. Use the gear ⚙️ for help.","bot");
+
+function toggleOptions(){
+  const o = document.getElementById("options");
+  o.style.display = o.style.display==="block"?"none":"block";
+}
+
+/* Alphabet */
+"ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").forEach(l=>{
+  const d=document.createElement("div");
+  d.className="tile";
+  d.textContent=l;
+  d.onclick=()=>speak(l);
+  document.getElementById("alphabet").appendChild(d);
+});
+
+/* Numbers */
+"0123456789".split("").forEach(n=>{
+  const d=document.createElement("div");
+  d.className="tile";
+  d.textContent=n;
+  d.onclick=()=>speak(n);
+  document.getElementById("numbers").appendChild(d);
+});
 </script>
 
 </body>
