--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Talk 2Me Nice</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Talk 2Me Nice — Conversation</title>
+
 <style>
 :root {
   --bg-main:#1b1f27;
@@ -18,58 +19,25 @@ body {
   font-family:system-ui, sans-serif;
   background:var(--bg-main);
   color:var(--text-main);
+  display:flex;
+  flex-direction:column;
+  height:100vh;
 }
 
-/* Step 1 / Container */
-#setupContainer, #chatContainer {
-  max-width:500px;
-  margin:3rem auto;
-  padding:2rem;
-  background: var(--bg-card);
-  border-radius:20px;
-  box-shadow:0 8px 20px rgba(0,0,0,0.25);
+header {
+  padding:1rem;
   text-align:center;
+  border-bottom:1px solid #333;
 }
 
-/* Headings */
-h1, h2 { margin-bottom:1rem; }
-p { color:var(--text-muted); margin-bottom:1.5rem; }
-
-/* Form Elements */
-label { display:block; margin-top:1rem; margin-bottom:0.3rem; text-align:left; }
-input, select {
-  width:100%;
-  padding:0.6rem;
-  border-radius:10px;
-  border:1px solid var(--accent);
-  background:#1f232d;
-  color:var(--text-main);
-  font-size:1rem;
-}
-
-/* Buttons */
-button {
-  margin-top:1.5rem;
-  padding:0.8rem 1.5rem;
-  border-radius:999px;
-  border:none;
-  background:var(--accent);
-  color:#1b1f27;
-  cursor:pointer;
-  font-size:1rem;
-  transition:all 0.3s ease;
-}
-button:hover { background:#5b90c7; transform:scale(1.03); }
-
-/* Chat */
 #chat {
   flex:1;
   padding:1rem;
   overflow-y:auto;
   display:flex;
   flex-direction:column;
-  min-height:300px;
 }
+
 .message {
   max-width:80%;
   padding:0.7rem 1rem;
@@ -77,17 +45,26 @@ button:hover { background:#5b90c7; transform:scale(1.03); }
   border-radius:16px;
   line-height:1.4;
 }
-.user { background:var(--accent); color:#1b1f27; align-self:flex-end; }
-.bot { background:var(--bg-card); align-self:flex-start; }
 
-/* Footer for chat */
-#chatFooter {
+.user {
+  background:var(--accent);
+  color:#1b1f27;
+  align-self:flex-end;
+}
+
+.bot {
+  background:var(--bg-card);
+  align-self:flex-start;
+}
+
+footer {
   display:flex;
   padding:0.8rem;
   gap:0.5rem;
   border-top:1px solid #333;
 }
-#chatFooter input {
+
+input {
   flex:1;
   padding:0.6rem;
   border-radius:12px;
@@ -95,7 +72,8 @@ button:hover { background:#5b90c7; transform:scale(1.03); }
   background:#1f232d;
   color:var(--text-main);
 }
-#chatFooter button {
+
+button {
   padding:0.6rem 1rem;
   border-radius:999px;
   border:none;
@@ -103,7 +81,7 @@ button:hover { background:#5b90c7; transform:scale(1.03); }
   cursor:pointer;
 }
 
-/* Gear & Options */
+/* Gear */
 #gear {
   position:fixed;
   bottom:90px;
@@ -118,6 +96,8 @@ button:hover { background:#5b90c7; transform:scale(1.03); }
   cursor:pointer;
   font-size:20px;
 }
+
+/* Options */
 #options {
   position:fixed;
   bottom:150px;
@@ -128,39 +108,137 @@ button:hover { background:#5b90c7; transform:scale(1.03); }
   width:260px;
   display:none;
 }
-.grid { display:grid; grid-template-columns:repeat(6,1fr); gap:0.4rem; }
-.tile { background:#1f232d; padding:0.5rem; text-align:center; border-radius:8px; cursor:pointer; }
-.word { cursor:pointer; text-decoration:underline; }
+
+.grid {
+  display:grid;
+  grid-template-columns:repeat(6,1fr);
+  gap:0.4rem;
+}
+
+.tile {
+  background:#1f232d;
+  padding:0.5rem;
+  text-align:center;
+  border-radius:8px;
+  cursor:pointer;
+}
+
+.word {
+  cursor:pointer;
+  text-decoration:underline;
+}
 </style>
 </head>
+
 <body>
 
-<!-- Step 1: Setup -->
-<div id="setupContainer">
-  <p style="font-size:0.85rem; color:#a1a6b0;">Step 1 of 2 · Setup</p>
-  <h1>Welcome to Talk 2Me Nice 💛</h1>
-  <p>Set up your account and get ready to learn naturally.</p>
+<script>
+// Step 2 redirect if Step 1 not completed
+const nickname = localStorage.getItem("nickname");
+const language = localStorage.getItem("language");
+const companion = localStorage.getItem("companion");
 
-  <label for="nickname">Nickname:</label>
-  <input type="text" id="nickname" placeholder="Your nickname">
+if(!nickname || !language || !companion){
+  window.location.href = "step1.html";
+}
+</script>
 
-  <label for="language">Choose Your Language (Free):</label>
-  <select id="language">
-    <option value="en-US">English ✔</option>
-    <option value="es-ES">Spanish ✔</option>
-    <option value="fr-FR">French ✔</option>
-    <option value="de-DE">German ✔</option>
-    <option value="zh-CN">Chinese ✔</option>
-    <option value="ja-JP" disabled>Japanese 🔒</option>
-    <option value="ko-KR" disabled>Korean 🔒</option>
-    <option value="it-IT" disabled>Italian 🔒</option>
-  </select>
+<header>
+  <h2 id="greeting"></h2>
+  <p style="font-size:0.8rem;color:#a1a6b0;">Step 2 of 2 · Conversation</p>
+</header>
 
-  <label for="companion">Choose a Companion:</label>
-  <select id="companion">
-    <option value="whisp">Whisp ✔</option>
-    <option value="star" disabled>Star 🔒</option>
-    <option value="puff" disabled>Puff 🔒</option>
+<div id="chat"></div>
+
+<footer>
+  <input id="userInput" placeholder="Type a word or phrase…" />
+  <button onclick="sendMessage()">Send</button>
+</footer>
+
+<div id="gear" onclick="toggleOptions()">⚙️</div>
+
+<div id="options">
+  <label>
+    <input type="checkbox" id="phoneticToggle" />
+    Pronunciation mode
+  </label>
+
+  <p>Alphabet</p>
+  <div class="grid" id="alphabet"></div>
+
+  <p>Numbers</p>
+  <div class="grid" id="numbers"></div>
+</div>
+
+<script>
+document.getElementById("greeting").textContent =
+  `Hi ${nickname} 🌱 I'm ${companion}.`;
+
+const chat = document.getElementById("chat");
+
+function speak(text){
+  const u = new SpeechSynthesisUtterance(text);
+  u.lang = language;
+  speechSynthesis.speak(u);
+}
+
+function addMessage(text, sender){
+  const div = document.createElement("div");
+  div.className = `message ${sender}`;
+
+  if(sender==="bot" && document.getElementById("phoneticToggle").checked){
+    text.split(" ").forEach(w=>{
+      const span = document.createElement("span");
+      span.className="word";
+      span.textContent=w+" ";
+      span.onclick=()=>speak(w);
+      div.appendChild(span);
+    });
+  } else {
+    div.textContent=text;
+  }
+
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function sendMessage(){
+  const i = document.getElementById("userInput");
+  if(!i.value.trim()) return;
+  addMessage(i.value,"user");
+  i.value="";
+  setTimeout(()=>{ addMessage("Try tapping a word if pronunciation mode is on 💛","bot"); },500);
+}
+
+addMessage("This is your calm space. Use the gear ⚙️ for help.","bot");
+
+function toggleOptions(){
+  const o = document.getElementById("options");
+  o.style.display = o.style.display==="block"?"none":"block";
+}
+
+/* Alphabet */
+"ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").forEach(l=>{
+  const d=document.createElement("div");
+  d.className="tile";
+  d.textContent=l;
+  d.onclick=()=>speak(l);
+  document.getElementById("alphabet").appendChild(d);
+});
+
+/* Numbers */
+"0123456789".split("").forEach(n=>{
+  const d=document.createElement("div");
+  d.className="tile";
+  d.textContent=n;
+  d.onclick=()=>speak(n);
+  document.getElementById("numbers").appendChild(d);
+});
+</script>
+
+</body>
+</html>
+="puff" disabled>Puff 🔒</option>
   </select>
 
   <button onclick="completeSetup()">Continue →</button>
