--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@ body {
   flex-direction:column;
   min-height:100vh;
 }
+<main id="dailyChatHub">
+  <h1>What would you like to practice today?</h1>
+  <p class="subtitle">Choose a conversation space. We’ll take it from there.</p>
+
+  <section class="chatModes">
+    <div class="modeCard workplace" data-mode="work">
+      <span class="icon">💼</span>
+      <h2>Workplace Conversations</h2>
+      <p>Natural, professional conversations — meetings, updates, and everyday work talk.</p>
+    </div>
+
+    <div class="modeCard dating" data-mode="dating">
+      <span class="icon">💬</span>
+      <h2>Dating & Social</h2>
+      <p>Connection-focused conversations — light, curious, and human.</p>
+    </div>
+
+    <div class="modeCard travel" data-mode="travel">
+      <span class="icon">✈️</span>
+      <h2>Travel</h2>
+      <p>Short, practical conversations for moving through the world with ease.</p>
+    </div>
+
+    <div class="modeCard smalltalk" data-mode="smalltalk">
+      <span class="icon">🧠</span>
+      <h2>Advanced Small Talk</h2>
+      <p>Flow, rhythm, and confidence in everyday conversations.</p>
+    </div>
+  </section>
+</main>
 
 /* Chat container */
 #chatContainer { 
