--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@ body {
   text-align: center;
   animation: fadeIn 0.8s ease-out;
 }
+<!-- Language Selector -->
+<div id="languageSelect">
+  <span class="label">Practicing in</span>
+  <select id="language">
+    <option value="en" selected>English (Free)</option>
+    <option value="es" disabled>Spanish 🔒</option>
+    <option value="fr" disabled>French 🔒</option>
+    <option value="de" disabled>German 🔒</option>
+    <option value="ja" disabled>Japanese 🔒</option>
+  </select>
+</div>
 
 #dailyChatHub h1 {
   font-size: 2rem;
